# lib-skeleton

./: LICENSE  README.md
mailbox/: CMakeLists.txt
mailbox/api/: mbxlib.h
mailbox/include/: Mailbox.h
mailbox/include/mbx/: containers.h
mailbox/lib/mbx/: mbxlib.cpp
mailbox/mailbox/: CMakeLists.txt
mailbox/mailbox/api/: mbxlib.h
mailbox/mailbox/include/mbx/: mbx.h  mbx_allocators.h  mbx_calloc.h  proxy_allocator.h
mailbox/mailbox/lib/: Mailbox.cpp
mailbox/mailbox/lib/mbx/: mbx_allocators.cpp  mbx_version.cpp
test-env/: conftest.py  test_api_calls.py  testhelpers.py
